# majmahuilis

./: README.md  pyproject.toml
src/: main.py  map.py  npc.py  object_handler.py  object_renderer.py  pathfinding.py  player.py  raycasting.py  settings.py  sound.py  sprite_object.py  weapon.py
src/demo/: pyproject.toml
src/demo/src/demo/: __init__.py  game.py  map.py  npc.py  object_handler.py  object_renderer.py  player.py  raycasting.py  sprite_object.py  texture.py  weapon.py
src/engine/: pyproject.toml
src/engine/src/engine/: __init__.py  npc.py  player.py  raycasting.py  sprite_object.py  weapon.py
src/engine/src/engine/actors/: npc.py
src/engine/src/engine/objects/: weapon.py
src/engine/src/engine/util/: object_renderer.py
src/huecatlan/: dna.txt  pyproject.toml
src/huecatlan/src/huecatlan/: __init__.py  main.py
