[project]
name = "majmahuilis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Lando Icaza C.", email = "landoicco@gmail.com"}
]

dependencies = [
    "demo",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.uv.workspace]
members = [
    "src/engine",
    "src/demo",
]

[tool.uv.sources]
demo = { workspace = true }
