[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lando", email = "landoicco@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "engine",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
engine = { workspace = true }
