[project]
name = "huecatlan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lando", email = "landoicco@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "panda3d>=1.10.16",
    "panda3d-gltf>=1.3.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
